--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@aws-amplify/ui-react": "^6.13.1",
+    "@aws-amplify/ui-react-liveness": "^3.4.7",
     "@aws-sdk/client-rekognition": "^3.936.0",
     "@aws-sdk/client-s3": "^3.937.0",
+    "@aws-sdk/client-sts": "^3.940.0",
     "@aws-sdk/s3-request-presigner": "^3.937.0",
     "@radix-ui/react-progress": "^1.1.8",
     "@supabase/supabase-js": "^2.84.0",
+    "aws-amplify": "^6.15.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
