--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@aws-sdk/client-s3": "^3.937.0",
     "@aws-sdk/client-sts": "^3.940.0",
     "@aws-sdk/s3-request-presigner": "^3.937.0",
+    "@google/genai": "^1.30.0",
     "@radix-ui/react-progress": "^1.1.8",
     "@roboflow/inference-sdk": "^0.1.2",
     "@supabase/supabase-js": "^2.84.0",
@@ -30,7 +31,8 @@
     "react-qr-code": "^2.0.18",
     "react-webcam": "^7.2.0",
     "sharp": "^0.34.5",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "zod-to-json-schema": "^3.25.0"
   },
   "devDependencies": {
     "@aws-amplify/backend": "^1.18.0",
